frontend/src/App.scss
#root {
  background: url("resources/landing-bg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 15% 65%;
  min-height: 100vh;
  background-attachment: fixed;
}

#headerLogo {
  width: 60px;
  height: 60px;
  @extend .d-inline-block, .align-top
}

nav.navbar-oih.navbar.navbar-expand-lg.navbar-light {
   background: #21295c;
}

nav .navbar-collapse {
  position: absolute;
  top: 0;
  background: rgba(0,24,49, 1);
  right: -100%; /* pull the menu out of the viewport from right */
  width: 25vw;
  height: 100vh;
  display: block;
  padding-top: 2em;
  transition: right 0.3s ease; /* transition for smooth sliding */
  z-index: 3;
}

nav .navbar-collapse.show {
  right: 0; /* push the menu back to viewport */
}

a.text-light.menu-text.nav-link {
    text-align: left;
}

.close-btn {
  position: absolute;
  top: 1em;
  right: 2em;
  cursor: pointer;
}

.primary-bg {
  background-color: #21295c;
}

.text-light-alt {
  color: white;
  font-weight: 700;
  font-size: 2em;
}

.primary-color-alt {
  color: #06bce5;
}

.primary-color {
  color: #21295c;
}

a.text-light.menu-text.nav-link {
  padding-left: 5em;
  font-weight: 600;
}

.bg-alt {
  color: #06bce5;
}

.searchbg {
  max-height: 40vh;
  background: url("resources/Photo Africa Coast Original.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 75% 60%;
}

.searchbg-alt {
  min-height: 10vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 75% 60%;
  padding-top: 2em;
  //background-color: #21295c;
}

.result-search {
  margin: 0 auto;
}

.spacer {
  margin-top: 4em;
  margin-bottom: 10em;
}

.clear-btn {
  all: unset;
  cursor: pointer;
  color: #06bce5;
}

.result-item {
  border-bottom: 1.2px solid #95a5a6;
}

.result-title {
  text-decoration: none;
  color: #ffffff;
}

.result-title:hover {
  text-decoration: underline;
}

p.result-p {
  text-align: left;
  margin-bottom: 0.5em;
  word-wrap: break-word;
}

p.result-p.truncate {
  width: 50%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.wrap-text {
  width: 80vw;
  flex-wrap: wrap;
}

.description-truncate {
  display: -webkit-box;
  max-width: 100%;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.pagination {
  text-transform: capitalize;
}

.bubble {
  padding: 10%;
  height: 80px;
  width: 80px;
  font-size: 0.5em;
  z-index: 2;
  border: 1px solid #fff;
}

.bubble-textarea {
  position: relative;
  top: 1.5em;
  left: -1em;
  background-color: #2f5592;
  color: white;
  padding: 1em;
  padding-left: 1.5em;
  border-radius: 0.8em;
}

.category-icon {
  position: relative;
  bottom: -1em;
}

#category-heading {
  position: relative;
  background-color: black;
  margin-top: -4em;
  padding: 1em 4em;
  width: fit-content;
  border-radius: 1em;
}

.category-section {
  background-color: rgba(0,24,49, 0.8);
  padding: 2em;
  border-radius: 3em;
  margin-top: 5em;
  margin-bottom: 7em;
}

#result-section {
  background-color: rgba(0,24,49, 0.8);
  padding: 2em;
  color: white;
}

#ResTabs {
  margin-bottom: -1em;
}

.footer-bg{
  background: #21295c;
}

.footer-logos {
  height: 4rem;
}

#resultsPaginate {
  margin-top: 2em;
}

#result-container {
  padding: 2% 6%;
}

.react-tabs__tab:focus::after {
  display: none !important;
}

/*=====*/
/* results*/
#expert {
  width: 300%;
}

.narrow {
  max-width: 20%;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* UNDONE, super hacky css to get the map to show up */
.exp-map {
  min-height: 500px;
  height: 500px;
  width: 112%;
}

.exp-map__title {
  display: none;
}

#resultsDiv {
  width: 112%;
}

.buttonHolder {
  margin-top: 1% !important;
}

